@@ -1,6 +1,8 @@
 Copyright (C) 2017 Alpha Griffin
 @%@~LICENSE~@%@
 
+saw_042917_1 - Automatic exception traces for empty-argument calls to fatal, error, or warn.
+
 saw_041417_1 - Better handling for multi-line arguments and exceptions.
 
 saw_041317_2 - Let the log calls take any object as first/only argument (fixes issue #1).
